# fowlie-mga

./: fowlie-mga.cabal
doc/presentation/: presentation.tex
doc/writeup/: writeup.bib  writeup.tex
src/: Main.hs
