name:                fowlie-mga
version:             0.1.0.0
synopsis:            An implementation of Meaghan Fowlie's Minimalist Grammar with Adjunction (MGA) formalism in Haskell.
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Patrick M. Niedzielski
maintainer:          pmn25@cornell.edu
copyright:           Copyright © 2015, Patrick M. Niedzielski.
category:            Language
build-type:          Simple
-- extra-source-files:

cabal-version:       >=1.10

executable fowlie-mga
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >=4.7 && <4.8
                     , base-unicode-symbols ==0.2.*
                     , matrix >= 0.3.4.4
  hs-source-dirs:      src
  default-language:    Haskell2010
